# e-book-converter

./: .env.example  .geminiignore  .gitignore  PERFORMANCE_ROADMAP.md  README.md  SESSION_SUMMARY.md  commit_message.txt
.github/workflows/: parse.yml
admin/: .gitignore  README.md  pubspec.yaml
admin/lib/: main.dart
admin/test/: widget_test.dart
admin/web/: manifest.json
context/: Bug Report Template.md  Gold Standard PDF Creation Guide V3.md  MVP Architectural Blueprint V.2.md  MVP Architectural Blueprint V3.md  MVP DevOps and Operations Plan V.2.md  MVP DevOps and Operations Plan V3.md  MVP Quality Assurance Plan V.2.md  MVP Quality Assurance Plan V3.md  Portability & Open-Source Guardrails V3.md  Preliminary MVP PRD.md  Project Codex_ Design Plan V3.md  Project Codex_ Design Plan.md  Project Codex_ Technical Clarifications V3.md  Project Codex_ Technical Clarifications.md  Sample Codex JSON.md  Semantic Mapping Logic V3.md  Semantic Mapping Logic.md  flutter_riverpod_guide.md  github_milestones.md  renderer_specs.md  renderer_specs_V3.md  supabase_database_schema.sql
docs/: README.md  codex_specification.md  database_schema.md  python_engine_setup.md
engine/: pyproject.toml  requirements.txt
engine/codex_engine/: __init__.py  extractor.py  heuristics.py  models.py
engine/tests/: test_extractor.py  test_heuristics.py  test_models.py
reader/: astro.config.mjs  package-lock.json  package.json  verify_pwa_visual.py
reader/src/: mock_manifest.json
scripts/: calibrate.py  create_test_pdf.py
supabase/: config.toml
tests/: rls_stress_test.sql
(+35 files in other folders)
