[project]
name = "codex-engine"
version = "0.1.0"
description = "Semantic PDF to Codex JSON parser"
authors = [
    {name = "Alpha Lantern"}
]
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "typer (>=0.21.1,<0.22.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pylint."messages control"]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 100
